fix: adjust the z-index values to correct the search icon on products page.

--- a/frontend/src/styles/products.css
+++ b/frontend/src/styles/products.css
@@ -25,7 +25,7 @@
 }
 .searchForm div {
   position: absolute;
-  z-index: 99;
+  /* z-index: 99; */
   top: 18%;
   left: 5px;
   font-size: 20px;
